--- a/front/styles/loginPage.css
+++ b/front/styles/loginPage.css
@@ -1,5 +1,6 @@
 .formContainer {
     width: 30%;
+    min-width: 350px;
     min-height: 60vh;
     margin-top: 45vh;
     transform: translateY(-50%);
