--- a/front/styles/selectFavorites.css
+++ b/front/styles/selectFavorites.css
@@ -4,7 +4,7 @@ label {
 .searchInput {
     width: calc(15vw - 55px);
     height: 34px;
-    margin: 20px 10px 0 0;
+    margin: 30px 10px 0 0;
     padding: 0 20px 0 35px;
     border: 0;
     border-radius: 17px;
@@ -22,13 +22,13 @@ label {
     height: 15px;
     position: absolute;
     right: calc(15vw - 18px);
-    top: 80px;
+    top: 90px;
     transition-duration: 120ms;
 }
 
 .movieList {
     width: 90%;
-    margin-top: 20px;
+    margin: 20px 0;
     padding: 10px;
     border-radius: 10px;
     background: #2e2e2ecc;
@@ -47,18 +47,18 @@ label {
     background-position: center center;
 }
 .ageRating {
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     border: 2px solid #ffffff;
     border-radius: 50%;
     color: #ffffff;
-    font-size: 25px;
+    font-size: 26px;
     font-weight: 700;
     text-align: center;
-    line-height: 45px;
+    line-height: 50px;
     position: relative;
-    left: calc(100% - 45px);
-    bottom: 5px;
+    left: calc(100% - 55px);
+    top: 5px;
     margin: 0 0 auto 0;
 }
 .textInfo {
@@ -84,5 +84,25 @@ label {
 }
 .movieRate {
     color: #ffdb00;
-    font-size: 18px;
+    font-size: 16px;
+}
+.submitFavoritesButton {
+    width: 150px;
+    height: 60px;
+    border: 0;
+    border-radius: 10px;
+    background: #ff6600;
+    font-family: 'Gemunu Libre', sans-serif;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 4px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+    transition-duration: 120ms;
+}
+.submitFavoritesButton:hover {
+    background: #b94800;
 }
